--- a/Project3/app/views/posts/show.html.erb
+++ b/Project3/app/views/posts/show.html.erb
@@ -1,2 +1,41 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1>Post Details</h1>
+
+<p><strong>Content:</strong> <%= @post.content %></p>
+<p><strong>Author:</strong> <%= link_to @post.user.username, posts_path(username: @post.user.username) %></p>
+<p><strong>Last Updated:</strong> <%= @post.updated_at.strftime("%B %d, %Y at %I:%M %p") %></p>
+
+<% if @post.user == current_user %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+<%= button_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure you want to delete this post?' }, class: "delete-button" %>
+<% end %>
+
+<hr>
+
+<h2>Comments (<%= @post.comments.count %>)</h2>
+
+<ul>
+  <% @comments.each do |comment| %>
+<li>
+  <strong><%= comment.user.username %>:</strong> <%= comment.content %>
+  <br>
+  <small><%= time_ago_in_words(comment.created_at) %> ago</small>
+  <% if comment.user == current_user %>
+    | <%= button_to 'Delete', post_comment_path(@post, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: "delete-button" %>
+  <% end %>
+</li>
+
+  <% end %>
+</ul>
+
+<h3>Add a Comment</h3>
+
+<%= form_with model: [@post, @comment], local: true do |form| %>
+  <div>
+    <%= form.label :content %><br>
+    <%= form.text_area :content, rows: 3, required: true %>
+  </div>
+  <br>
+  <div>
+    <%= form.submit "Post Comment" %>
+  </div>
+<% end %>
